// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RuuviTag Gateway getUnavailableDevices() should produce unavailability messages for ruuvitags that haven't been observed inside timeout 1`] = `
[
  {
    "availability": "offline",
    "decimalPrecision": 2,
    "device": {
      "friendlyName": "my_ruuvitag",
      "id": "a1:b2",
      "model": "environmental",
      "type": "ruuvitag",
    },
    "lastPublishedAvailability": "online",
    "lastSeen": "2019-10-10T00:00:00.000Z",
    "timeout": 30000,
  },
]
`;

exports[`RuuviTag Gateway ruuvitagGateway() should handle unknown ruuvitags normally if unknown ruuvitags are allowed 1`] = `
[
  {
    "device": {
      "friendlyName": "unknown",
      "id": "unknown",
      "macAddress": "a1:b2",
      "model": "environmental",
      "rssi": 23,
      "timeout": 30000,
      "type": "ruuvitag",
    },
    "id": "mock-uuid",
    "payload": {
      "state": "online",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "availability",
  },
  {
    "device": {
      "friendlyName": "unknown",
      "id": "unknown",
      "macAddress": "CB:B8:33:4C:88:4F",
      "model": "environmental",
      "rssi": 23,
      "timeout": 30000,
      "type": "ruuvitag",
    },
    "id": "mock-uuid",
    "payload": {
      "absoluteHumidity": 11.84,
      "accelerationX": 0,
      "accelerationY": -0,
      "accelerationZ": 1.04,
      "batteryVoltage": 2.98,
      "breezeIndoorClimateIndex": 3,
      "breezeIndoorClimateIndexDescription": "moderate",
      "dewPoint": 14.2,
      "heatIndex": 26,
      "humidex": 28,
      "macAddress": "CB:B8:33:4C:88:4F",
      "measurementSequence": 205,
      "movementCounter": 66,
      "pressure": 100044,
      "relativeHumidityPercentage": 53.49,
      "temperature": 24.3,
      "txPower": 4,
      "type": "environmental",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "sensor-data",
  },
  {
    "device": {
      "friendlyName": "unknown",
      "id": "unknown",
      "macAddress": "CB:B8:33:4C:88:4F",
      "model": "environmental",
      "rssi": 23,
      "timeout": 30000,
      "type": "ruuvitag",
    },
    "id": "mock-uuid",
    "payload": {
      "absoluteHumidity": 11.84,
      "accelerationX": 0,
      "accelerationY": -0,
      "accelerationZ": 1.04,
      "batteryVoltage": 2.98,
      "breezeIndoorClimateIndex": 3,
      "breezeIndoorClimateIndexDescription": "moderate",
      "dewPoint": 14.2,
      "heatIndex": 26,
      "humidex": 28,
      "macAddress": "CB:B8:33:4C:88:4F",
      "measurementSequence": 205,
      "movementCounter": 66,
      "pressure": 100044,
      "relativeHumidityPercentage": 53.49,
      "temperature": 24.3,
      "txPower": 4,
      "type": "environmental",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "sensor-data",
  },
]
`;

exports[`RuuviTag Gateway ruuvitagGateway() should produce a availability and a payload message for a found ruuvitag advertisement 1`] = `
[
  {
    "device": {
      "friendlyName": "my_ruuvitag",
      "id": "a1:b2",
      "macAddress": "a1:b2",
      "model": "environmental",
      "rssi": 23,
      "timeout": 30000,
      "type": "ruuvitag",
    },
    "id": "mock-uuid",
    "payload": {
      "state": "online",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "availability",
  },
  {
    "device": {
      "friendlyName": "my_ruuvitag",
      "id": "a1:b2",
      "macAddress": "CB:B8:33:4C:88:4F",
      "model": "environmental",
      "rssi": 23,
      "timeout": 30000,
      "type": "ruuvitag",
    },
    "id": "mock-uuid",
    "payload": {
      "absoluteHumidity": 11.84,
      "accelerationX": 0,
      "accelerationY": -0,
      "accelerationZ": 1.04,
      "batteryVoltage": 2.98,
      "breezeIndoorClimateIndex": 3,
      "breezeIndoorClimateIndexDescription": "moderate",
      "dewPoint": 14.2,
      "heatIndex": 26,
      "humidex": 28,
      "macAddress": "CB:B8:33:4C:88:4F",
      "measurementSequence": 205,
      "movementCounter": 66,
      "pressure": 100044,
      "relativeHumidityPercentage": 53.49,
      "temperature": 24.3,
      "txPower": 4,
      "type": "environmental",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "sensor-data",
  },
]
`;

exports[`RuuviTag Gateway ruuvitagGateway() should support air quality ruuvitags 1`] = `
[
  {
    "device": {
      "friendlyName": "my_air_quality_ruuvitag",
      "id": "a1:b2",
      "macAddress": "a1:b2",
      "model": "air-quality",
      "rssi": 23,
      "timeout": 30000,
      "type": "ruuvitag",
    },
    "id": "mock-uuid",
    "payload": {
      "state": "online",
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "availability",
  },
  {
    "device": {
      "friendlyName": "my_air_quality_ruuvitag",
      "id": "a1:b2",
      "macAddress": "4C:88:4F",
      "model": "air-quality",
      "rssi": 23,
      "timeout": 30000,
      "type": "ruuvitag",
    },
    "id": "mock-uuid",
    "payload": {
      "absoluteHumidity": 16.33,
      "atmoTubeAQI": 0,
      "atmoTubeAQIDescription": "severely-polluted",
      "breezeIndoorClimateIndex": 6,
      "breezeIndoorClimateIndexDescription": "severe",
      "calibrationInProgress": false,
      "co2": 201,
      "dewPoint": 19.6,
      "heatIndex": 31,
      "humidex": 37,
      "luminosity": 13026.67,
      "macAddress": "4C:88:4F",
      "measurementSequence": 205,
      "nox": 4,
      "pm1": null,
      "pm10": null,
      "pm2_5": 11.2,
      "pm4": null,
      "pressure": 101102,
      "relativeHumidityPercentage": 55.3,
      "ruuviIAQS": 81.33333333333333,
      "ruuviIAQSDescription": "good",
      "temperature": 29.5,
      "type": "air-quality",
      "voc": 20,
    },
    "time": "2019-10-10T00:00:00.000Z",
    "type": "sensor-data",
  },
]
`;
